--- a/DZ22/index.html
+++ b/DZ22/index.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Search for post by ID</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Homework 22</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+  <div class="container">
     <label for="postId">Enter post ID (1-100):</label>
-    <input type="number" id="postId" min="1" max="100" />
-    <button id="searchButton">Search</button>
+    <input type="number" id="js--postId" min="1" max="100" />
+    <button id="js--searchButton">Search</button>
 
-    <div id="postContainer" style="display: none">
+    <div id="js--postContainer" style="display: none">
       <h2>Post</h2>
-      <p id="postTitle"></p>
-      <p id="postBody"></p>
-      <button id="commentsButton">Load comments</button>
+      <p id="js--postTitle"></p>
+      <p id="js--postBody"></p>
+      <button id="js--commentsButton">Load comments</button>
+      <div id="js--comments"></div>
     </div>
+  </div>
 
-    <script>
-      const apiUrl = "https://jsonplaceholder.typicode.com";
+  <script>
+    const apiUrl = "https://jsonplaceholder.typicode.com";
 
-      const postContainer = document.getElementById("postContainer");
-      const postTitle = document.getElementById("postTitle");
-      const postBody = document.getElementById("postBody");
-      const commentsButton = document.getElementById("commentsButton");
-      const searchButton = document.getElementById("searchButton");
-      const postIdInput = document.getElementById("postId");
+    const postContainer = document.getElementById("js--postContainer");
+    const postTitle = document.getElementById("js--postTitle");
+    const postBody = document.getElementById("js--postBody");
+    const commentsButton = document.getElementById("js--commentsButton");
+    const searchButton = document.getElementById("js--searchButton");
+    const postIdInput = document.getElementById("js--postId");
+    const commentsContainer = document.getElementById("js--comments");
 
-      const loadPostById = (postId) => {
-        return fetch(`${apiUrl}/posts/${postId}`).then((response) => {
-          if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-          }
-          return response.json();
-        });
-      };
+    const loadPostById = (postId) => {
+      return fetch(`${apiUrl}/posts/${postId}`).then((response) => {
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        return response.json();
+      });
+    };
 
-      const loadCommentsByPostId = (postId) => {
-        return fetch(`${apiUrl}/posts/${postId}/comments`).then((response) => {
-          if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-          }
-          return response.json();
-        });
-      };
+    const loadCommentsByPostId = (postId) => {
+      return fetch(`${apiUrl}/posts/${postId}/comments`).then((response) => {
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        return response.json();
+      });
+    };
 
-      searchButton.addEventListener("click", () => {
+    searchButton.addEventListener("click", () => {
+      if (postIdInput.value != 0) {
         const postId = postIdInput.value;
         loadPostById(postId)
           .then((post) => {
@@ -53,7 +61,12 @@
             postContainer.style.display = "block";
             commentsButton.addEventListener("click", () => {
               loadCommentsByPostId(postId).then((comments) => {
-                console.log(comments);
+                comments.forEach(comment => {
+                  commentsContainer.insertAdjacentHTML('beforeend', (
+                    `<p class="name">${comment.name} <span class="email">${comment.email}</span></p>` +
+                    `<p class="comment-body">${comment.body}</p>`
+                  ))
+                });
               });
             });
           })
@@ -61,7 +74,12 @@
             console.error("Error while loading post", error);
             alert("Could not load post. Please try again later.");
           });
-      });
-    </script>
-  </body>
+      } else {
+        alert('Please input Post ID');
+      }
+
+    });
+  </script>
+</body>
+
 </html>
