--- a/DZ25/index.html
+++ b/DZ25/index.html
@@ -35,7 +35,7 @@
                   <span class="visually-hidden">Loading...</span>
                </div>
             </div>
-
+            <div class="js--img-container"></div>
             <pre class="mt-2 mb-0 js--swapi_pre"></pre>
 
          </div>
